# JLMoldes

./: .env.development  .gitignore  LICENSE  README.md  package-lock.json  package.json  tailwind.config.js  websocket-server.js
.github/workflows/: linting.yaml  test.yaml
contexts/: AuthContext.js  WebSocketContext.js
infra/: controller.js  database.js  errors.js
infra/migrations/: 1742166798440_m1table.js  1742166798440_mtable.js  1742437877491_cadastro.js  1742839600695_r1BSA.js  1742839600695_rBSA.js  1743051150008_deve.js  1743051448248_devo.js  1743051448249_add-id-to-devo.js  1743455832907_C.js  1743455832907_C1.js  1743455852745_papel-C.js  1743455852745_papel-C1.js  1743960740198_config.js  1744638550496_pessoal.js  1744740186282_oficina.js  1745505331312_saidaP.js  1745505337323_saidaO.js  1746106649906_Nota.js  1748270709823_papel.js  1748889310442_dec.js  1749139087482_temp.js  1749231445081_pagamentos.js  1749749887775_login.js  1751582782500_avisado-deve.js  1751983841170_aviso.js  1751983841171_add_deve_delete_trigger.js  1751983841172_add_deve_update_trigger.js  1755263362424_plotterC.js  1755263362425_alter_plotterc_numeric_to_float.js  1758604800000_add_nome_to_plotterC.js  1761143000000_add_primary_key_to_deve_deveid.js  1761145000000_add_plotter_nome_to_plotterc.js  (+9 more)
models/: cadastro.js  functions.js  migrator.js  tables.js  utils.js
pages/: _app.js  index.js  login.js
plotter/: 2.plt  22.plt  80 santiago_1.plt  Cargo.toml  history.ini  plot_1.plt  plot_5.plt
plotter/src/: main.rs  main.rs.bkp
styles/: globals.css
(+113 files in other folders)
