[package]
name = "plotter_reader"
version = "0.1.0"
edition = "2021"

[dependencies]
postgres = "0.19.7"
geo = "0.28.0"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
postgres-native-tls = "0.5.0"
native-tls = "0.2.11"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
